feat : make website responsive

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Landing Page</title>
   </head>
 
-  <body class="dark bg-neutral-light-100 dark:bg-neutral-dark-100">
+  <body class="dark bg-neutral-light-100 dark:bg-neutral-dark-100 overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
