--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <title>Rael AI</title>
   </head>
 
   <body class="dark bg-neutral-light-100 dark:bg-neutral-dark-100 overflow-x-hidden">
